[package]
edition = "2024"
name = "simple-ray-tracing"
version = "0.1.0"

[features]
default = ["f32"]
f32 = []
f64 = []
rayon = ["dep:rayon"]

[dependencies]
rayon = {version = "1.11", optional = true}

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
